유로에서 원으로, 유로에서 달러로 환전